force-app/main/default/objects/OS_Cartera__c/OS_Cartera__c.object-meta.xml
<CustomObject>
    <description>Objeto para almacenar la cola de telefonía y su grupo de trabajo</description>
    <label>Cartera</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carteras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>