force-app/main/default/objects/OS_Cartera__c/fields/OS_Activo__c.field-meta.xml
<CustomField>
    <fullName>OS_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica si un Centro Manipulador está activo o no.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>