force-app/main/default/objects/OS_Cartera__c/fields/OS_Cola_Telefonia__c.field-meta.xml
<CustomField>
    <fullName>OS_Cola_Telefonia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cola de telefonía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>