force-app/main/default/objects/OS_Cartera__c/fields/OS_Email__c.field-meta.xml
<CustomField>
    <fullName>OS_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>