force-app/main/default/objects/OS_Cartera__c/fields/OS_GrupoTrabajo__c.field-meta.xml
<CustomField>
    <fullName>OS_GrupoTrabajo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Trabajo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo de Trabajo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Centros Manipuladores</relationshipLabel>
    <relationshipName>Carteras</relationshipName>
    <type>Lookup</type>
</CustomField>