force-app/main/default/objects/OS_Cartera__c/fields/OS_Matricula__c.field-meta.xml
<CustomField>
    <fullName>OS_Matricula__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Matrícula</label>
    <length>8</length>
    <type>Text</type>
</CustomField>