force-app/main/default/objects/OS_Cartera__c/recordTypes/OS_Cartera.recordType-meta.xml
<RecordType>
    <fullName>OS_Cartera</fullName>
    <active>true</active>
    <label>Cartera</label>
</RecordType>