force-app/main/default/objects/OS_Cartera__c/recordTypes/OS_Centro_Manipulador.recordType-meta.xml
<RecordType>
    <fullName>OS_Centro_Manipulador</fullName>
    <active>true</active>
    <label>Centro Manipulador</label>
</RecordType>