force-app/main/default/objects/OS_Cartera__c/recordTypes/OS_Cola_Telefonia.recordType-meta.xml
<RecordType>
    <fullName>OS_Cola_Telefonia</fullName>
    <active>true</active>
    <label>Cola Telefonía</label>
</RecordType>