force-app/main/default/objects/OS_Cartera__c/recordTypes/OS_Especialista_MIC.recordType-meta.xml
<RecordType>
    <fullName>OS_Especialista_MIC</fullName>
    <active>true</active>
    <label>Especialista MIC</label>
</RecordType>