force-app/main/default/objects/OS_Cartera__c/listViews/Carteras.listView-meta.xml
<ListView>
    <fullName>Carteras</fullName>
    <columns>NAME</columns>
    <columns>OS_Cola_Telefonia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OS_Cartera__c.OS_Cartera</value>
    </filters>
    <label>Carteras</label>
    <sharedTo>
        <role>COPS</role>
    </sharedTo>
</ListView>