force-app/main/default/objects/OS_Cartera__c/listViews/Centros_manipuladores.listView-meta.xml
<ListView>
    <fullName>Centros_manipuladores</fullName>
    <columns>NAME</columns>
    <columns>OS_GrupoTrabajo__c</columns>
    <columns>OS_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OS_Cartera__c.OS_Centro_Manipulador</value>
    </filters>
    <label>Centros manipuladores</label>
    <sharedTo>
        <role>COPS</role>
    </sharedTo>
</ListView>