force-app/main/default/objects/OS_Cartera__c/listViews/Colas_telefon_a.listView-meta.xml
<ListView>
    <fullName>Colas_telefon_a</fullName>
    <columns>NAME</columns>
    <columns>OS_GrupoTrabajo_ColaTelefonia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OS_Cartera__c.OS_Cola_Telefonia</value>
    </filters>
    <label>Colas telefonía</label>
    <sharedTo>
        <role>COPS</role>
    </sharedTo>
</ListView>