force-app/main/default/objects/OS_Cartera__c/listViews/OS_Todas_Las_Carteras.listView-meta.xml
<ListView>
    <fullName>OS_Todas_Las_Carteras</fullName>
    <columns>NAME</columns>
    <columns>OS_Cola_Telefonia__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las carteras</label>
</ListView>